Fri Jul 22 15:12:44 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/testdata/DcpsLib/DcpsLibTest.opendds:
        * tools/modeling/testdata/DcpsLib/DcpsLibTest.opendds_diagram:
        * tools/modeling/testdata/DcpsLib/DcpsLibTest_screenshot_2.png:

	  Extended to include usage of shared Topic.

Fri Jul 22 03:34:40 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * AUTHORS:

          Updated with the names of the new contributors (since 2.3).

Thu Jul 21 22:33:20 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:

          Added a note about the dissector enhancements.

Thu Jul 21 18:16:19 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * NEWS:

          Added a note about end of support for TAO 1.5a.

Wed Jul 20 21:54:17 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/sample_manager.cpp:

          Fix more wide-char build compatibility issues.

Wed Jul 20 19:08:51 UTC 2011  Chip Jones  <jonesc@ociweb.com>

        * NEWS:

          Updated NEWS file with section on Monitor tool's
          new graph features.

        * tools/monitor/README:

          Minor update.


Wed Jul 20 15:12:27 UTC 2011  Chip Jones <jonesc@ociweb.com>

        * tools/monitor/GraphGenerator.cpp:
        * tools/monitor/Monitor.mpc:

          Fixed data type size warning on 64-bit systems.
          Removed Graphviz library dependency from MPC file.

Tue Jul 19 23:12:43 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/sample_manager.cpp:

          Fix wide-char build compatibility issues.

Tue Jul 19 17:03:35 UTC 2011  Chip Jones  <jonesc@ociweb.com>

        * tools/monitor/GraphGenerator.h:
        * tools/monitor/GraphGenerator.cpp:
        * tools/monitor/GvOptions.h:
        * tools/monitor/GvOptions.cpp:
        * tools/monitor/MonitorData.h:
        * tools/monitor/MonitorDataModel.h:
        * tools/monitor/MonitorDataModel.cpp: